# OpenClaw

./: .env.example  .gitignore  DevPlan.md  README.md  SAD.md  pyproject.toml
ComfyUIWorkflows/: 260225_MICKMUMPITZ_AI-RENDERER_SMPL_2-0_Runpod.json  SV3D-worflow-for-ComfyUI-with-custom-nodes.json  Trellis2Multiviews_GGUF.json  Trellis2_High_Quality_FP16.json  Trellis2_High_Quality_GGUF.json  Trellis2_High_Quality_GGUF_Q8.json  missingNodes.md  texto-a-3d-ERIC.json
ComfyUIWorkflows/local/: README.md  workflowGenerla.md
configs/comfyui/: 3d-custom-nodes-manifest.md  3d-models-manifest.md  README.md  custom-nodes-manifest.md  model-set-baseline-minimo-rtx3060-8gb-12gb.md  models-manifest.md
configs/desktop/: README.md  openclaw-backup.desktop.template  openclaw-health.desktop.template  restart-studio-services.desktop.template
configs/openclaw/: README.md
configs/systemd-user/: comfyui.service.template  hunyuan3d.service.template  thermal-monitor.service.template
docs/architecture/: actions.md  runner-interface.md
docs/comfyui/: 3d-atomic-composed-validation-results.md  3d-atomic-composed-validation.md  3d-blender-bridge.md  3d-fallback-paths.md  3d-hardware-profiles.md  3d-interface.md  3d-io-contract.md  3d-quality-bar.md  3d-stack-evaluation.md  3d-troubleshooting.md  3d-usecase-map.md  3d-usecases.md  3d-whatsapp-extension.md  baseline-minimo-rtx3060-8gb-12gb.md  (+22 more)
tests/: test_comfyui_general_video_v1.py  test_comfyui_openclaw_workflow_nodes.py  test_comfyui_runner.py  test_comfyui_smoke_validation.py  test_comfyui_workflow_library.py  test_flow_catalog.py
(+129 files in other folders)
